syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";


option go_package = "./proto";

message Connect {
    string id = 1;
    string name = 2;
}

enum Direction {
    UP = 0;
    DOWN = 1;
    LEFT = 2;
    RIGHT = 3;
    STOP = 4;
}

message Move {
    Direction direction = 1;
}

message Laser {
    string id = 1;
    Direction direction = 2;
    google.protobuf.Timestamp startTime = 3;
    Coordinate initialPosition = 4;
}

message Request {
    oneof action {
        Connect connect = 1;
        Move move = 2;
        Laser laser = 3;
    }
}

message Coordinate {
    int32 x = 1;
    int32 y = 2;
}

message Player {
    string id = 1;
    string name = 2;
    Coordinate position = 3;
}

message Entity {
    oneof entity {
        Player player = 2;
        Laser laser = 3;
    }
}

message Initialize {
    Coordinate position = 1;
    repeated Player players = 2;
    repeated Laser lasers = 3;
}

message AddEntity {
    Entity entity = 1;
}

message UpdateEntity {
    Entity entity = 1;
}

message RemoveEntity {}

message PlayerKilled {
    Coordinate spawnPosition = 1;
}

message Response {
    string id = 1;
    oneof action {
        Initialize initialize = 2;
        AddEntity addEntity = 3;
        UpdateEntity updateEntity = 4;
        RemoveEntity removeEntity = 5;
        PlayerKilled playerKilled = 6;
    }
}

service Game {
    rpc Stream (stream Request) returns (stream Response) {}
}
